--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,32 @@
 @font-face {
+  font-family: 'MyFont';
+  src: url('fonts/Lato-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('fonts/Lato-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('fonts/Lato-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MyFont';
+  src: url('fonts/Lato-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
     font-family: "LogoFont";
     src: url("fonts/sweet-purple.otf") format("opentype"),
          url("fonts/sweet-purple.ttf") format("truetype");
@@ -6,41 +34,57 @@
 
   @font-face {
     font-family: 'PromoFont';
-    src: url('fonts/static/Alkatra-Regular.ttf') format('truetype');
+    src: url('fonts/static/EduNSWACTFoundation-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'PromoFont';
-    src: url('fonts/static/Alkatra-SemiBold.ttf') format('truetype');
+    src: url('fonts/static/EduNSWACTFoundation-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'PromoFont';
-    src: url('fonts/static/Alkatra-Medium.ttf') format('truetype');
+    src: url('fonts/static/EduNSWACTFoundation-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
   }
   
   @font-face {
     font-family: 'PromoFont';
-    src: url('fonts/static/Alkatra-Bold.ttf') format('truetype');
+    src: url('fonts/static/EduNSWACTFoundation-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
   }
   
 
+  :root {
+    --primary-color: rgb(45, 45, 48);
+    --secondary-color: #ab521a;
+    --success-color: #28a745;
+  }
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'MyFont', Courier, monospace;
     
+}
+
+nav li.active a {
+  transform: scale(1.1);
+  color: var(--secondary-color);
 }
 
 body{
     background-color: white;
+}
+
+body.menu {
+  background-color: var(--primary-color);
 }
 .order-now {
     width: 100vw;
@@ -79,6 +123,12 @@ nav ul {
     color: #fff;
     text-decoration: none;
     padding: 10px;
+    font-weight: 700;
+    font-size: 16px;
+  }
+
+  nav a:hover {
+    transform: scale(1.1);
   }
 
   .logo {
@@ -112,7 +162,7 @@ nav ul {
   }
   
   .button {
-    background-color: #ab521a;
+    background-color: var(--secondary-color);
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
@@ -154,39 +204,41 @@ nav ul {
     margin: 80px 120px;
   }
 
-  .card {
+  .promo>.card {
     font-family: 'PromoFont', Courier, monospace;
     color: white;
     box-sizing: border-box;
     padding: 20px;
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 3fr ;
-    background-color: rgb(45, 45, 48);
+    background-color: var(--primary-color);
     width: 100%;
     height: 250px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     align-items: center;
-    gap: 15px;
+    gap: 0px 30px;
+    
   }
 
   #promo-img {
     border-radius: 50%;
-    border: 4px solid #ab521a;
+    border: 4px solid var(--secondary-color);
     grid-row: 1/4;
   }
 
   #promo-value {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 17px;
-  }
-
-  #promo-title {
     font-weight: 400;
   }
 
+  #promo-title {
+    font-weight: 300;
+  }
+
   #promo-btn {
-    background-color: #ab521a;
+    background-color: var(--secondary-color);
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
@@ -196,12 +248,64 @@ nav ul {
   }
 
   .card img {
-    height: 140px;
-    width: 140px;
+    height: 130px;
+    width: 130px;
   }
 
   button:hover {
     transform: scale(1.03);
     cursor: pointer;
   }
+
+
+  .menutitle-background {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    height: 15vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-clip: content-box;
+    filter: brightness(30%) blur(2px);
+  }
+  .menutitle {
+    height: 15vh;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    gap: 8px;
+    
+  }
+
+  .menutitle .title {
+    font-family: 'PromoFont', Courier, monospace;
+    font-weight: 700;
+    font-size: 30px;
+  }
+
+  .menutitle img {
+    width: 40px ;
+    height: 40px ;
+  }
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.menu-container img {
+  max-width: 800px;
+  width: 80%;
+}
   
